--- a/package.json
+++ b/package.json
@@ -1,19 +1,13 @@
 {
   "name": "recursive-watcher-bug",
   "version": "1.0.0",
-  "description": "",
+  "description": "repro a recursive watch bug on node 20 on ubuntu",
   "main": "lib/index.js",
-  "scripts": {
-    "test": "c8 --100 tap --no-coverage test/index.js"
-  },
-  "author": "Colin J. Ihrig <cjihrig@gmail.com> (http://www.cjihrig.com/)",
   "license": "MIT",
+  "scripts": {
+    "test": "c8 --100 node --test"
+  },
   "devDependencies": {
-    "@fastify/deepmerge": "^1.3.0",
-    "c8": "^7.14.0",
-    "minimatch": "^9.0.1",
-    "snazzy": "^9.0.0",
-    "standard": "^17.1.0",
-    "tap": "^16.3.6"
+    "c8": "^7.14.0"
   }
 }
