--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,8 +8,10 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
+        # node-version: [18.16.0, 20.3.0]
         node-version: [20.3.0]
-        os: [ubuntu-latest]
+        # os: [ubuntu-latest]
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -17,7 +19,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         check-latest: true
-    - run: npm install
-    - run: npm test
+    - run: node index.js
       env:
         CI: true
