--- a/package.json
+++ b/package.json
@@ -2,12 +2,9 @@
   "name": "recursive-watcher-bug",
   "version": "1.0.0",
   "description": "repro a recursive watch bug on node 20 on ubuntu",
-  "main": "lib/index.js",
+  "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "c8 --100 node --test"
-  },
-  "devDependencies": {
-    "c8": "^7.14.0"
+    "test": "node index.js"
   }
 }
